hubSide/force-app/main/default/objects/Asset/fields/Casse__c.field-meta.xml
<CustomField>
    <fullName>Casse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Casse</label>
    <type>Checkbox</type>
</CustomField>