hubSide/force-app/main/default/objects/Asset/fields/Code_formule__c.field-meta.xml
<CustomField>
    <fullName>Code_formule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Offre choisie dans le contrat</description>
    <label>Code formule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordTypeId</field>
            <operation>equals</operation>
            <value>Formule location</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contrats de location</relationshipLabel>
    <relationshipName>Contrats_location</relationshipName>
    <type>Lookup</type>
</CustomField>