hubSide/force-app/main/default/objects/Asset/fields/Code_formule_Tech__c.field-meta.xml
<CustomField>
    <fullName>Code_formule_Tech__c</fullName>
    <description>Utilisé pour la page &quot;mon espace&quot; de community afin de rendre la valeur non cliquable</description>
    <formula>Code_formule__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formule</label>
    <type>Text</type>
</CustomField>