hubSide/force-app/main/default/objects/Asset/fields/Communication_frauduleuse__c.field-meta.xml
<CustomField>
    <fullName>Communication_frauduleuse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Communication frauduleuse</label>
    <type>Checkbox</type>
</CustomField>