hubSide/force-app/main/default/objects/Asset/fields/Date_cloture__c.field-meta.xml
<CustomField>
    <fullName>Date_cloture__c</fullName>
    <description>Date résiliation souhaitée par le client</description>
    <inlineHelpText>Date résiliation souhaitée par le client</inlineHelpText>
    <label>Date de cloture</label>
    <type>Date</type>
</CustomField>