hubSide/force-app/main/default/objects/Asset/fields/Date_cloture_programmee__c.field-meta.xml
<CustomField>
    <fullName>Date_cloture_programmee__c</fullName>
    <description>Date résiliation programmé par le souhait du client</description>
    <label>Date de cloture programmée</label>
    <type>Date</type>
</CustomField>