hubSide/force-app/main/default/objects/Asset/fields/Date_debut_contrat__c.field-meta.xml
<CustomField>
    <fullName>Date_debut_contrat__c</fullName>
    <description>Date de début du contrat souscrit par le client.</description>
    <label>Date de début du contrat</label>
    <type>Date</type>
</CustomField>