hubSide/force-app/main/default/objects/Asset/fields/Date_dernier_reglement__c.field-meta.xml
<CustomField>
    <fullName>Date_dernier_reglement__c</fullName>
    <label>Date dernier règlement</label>
    <type>Date</type>
</CustomField>