hubSide/force-app/main/default/objects/Asset/fields/Date_derniere_regularisation__c.field-meta.xml
<CustomField>
    <fullName>Date_derniere_regularisation__c</fullName>
    <label>Date dernière régularisation</label>
    <type>Date</type>
</CustomField>