hubSide/force-app/main/default/objects/Asset/fields/Date_fin_contrat__c.field-meta.xml
<CustomField>
    <fullName>Date_fin_contrat__c</fullName>
    <description>Date de fin de contrat calculée à chaque renouvellement</description>
    <inlineHelpText>Date de fin de contrat calculée à chaque renouvellement</inlineHelpText>
    <label>Date d&apos;expiration</label>
    <type>Date</type>
</CustomField>