hubSide/force-app/main/default/objects/Asset/fields/Date_resiliation__c.field-meta.xml
<CustomField>
    <fullName>Date_resiliation__c</fullName>
    <description>Date de résiliation, si elle n&apos;est pas renseignée la souscription est toujours active.</description>
    <label>Date de résiliation</label>
    <type>Date</type>
</CustomField>