hubSide/force-app/main/default/objects/Asset/fields/Date_souscription__c.field-meta.xml
<CustomField>
    <fullName>Date_souscription__c</fullName>
    <label>Date de souscription</label>
    <type>Date</type>
</CustomField>