hubSide/force-app/main/default/objects/Asset/fields/duree_engagement__c.field-meta.xml
<CustomField>
    <fullName>duree_engagement__c</fullName>
    <inlineHelpText>Durée du contrat (12 &amp; 24 mois)</inlineHelpText>
    <label>Durée d&apos;engagement</label>
    <length>90</length>
    <type>Text</type>
</CustomField>