hubSide/force-app/main/default/objects/Asset/fields/Echanges_realises__c.field-meta.xml
<CustomField>
    <fullName>Echanges_realises__c</fullName>
    <inlineHelpText>Indique le nombre d&apos;échange réalisé</inlineHelpText>
    <label># Echanges réalisés</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>