hubSide/force-app/main/default/objects/Asset/fields/Eligible_la_livraison_domicile__c.field-meta.xml
<CustomField>
    <fullName>Eligible_la_livraison_domicile__c</fullName>
    <formula>Code_formule__r.Livraison_a_domicile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible à la livraison à domicile</label>
    <type>Checkbox</type>
</CustomField>