hubSide/force-app/main/default/objects/Asset/fields/Email_client__c.field-meta.xml
<CustomField>
    <fullName>Email_client__c</fullName>
    <label>Email client</label>
    <type>Email</type>
</CustomField>