hubSide/force-app/main/default/objects/Asset/fields/Emprunt_en_cours__c.field-meta.xml
<CustomField>
    <fullName>Emprunt_en_cours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stocke l&apos;id de l&apos;emprunt en cours</description>
    <label>Emprunt en cours</label>
    <referenceTo>Emprunt__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>