hubSide/force-app/main/default/objects/Asset/fields/Enseigne__c.field-meta.xml
<CustomField>
    <fullName>Enseigne__c</fullName>
    <formula>TEXT(Id_distributeur__r.Enseigne__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enseigne</label>
    <type>Text</type>
</CustomField>