hubSide/force-app/main/default/objects/Asset/fields/Etat_contrat__c.field-meta.xml
<CustomField>
    <fullName>Etat_contrat__c</fullName>
    <formula>IMAGE( 
CASE(  Status , 
&quot;valid&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;pendingApproval&quot;,  &quot;/img/samples/flag_yellow.gif&quot;,
&quot;unpaid&quot;,   &quot;/img/samples/flag_yellow.gif&quot;,
&quot;closing&quot;,    &quot;/img/samples/flag_red.gif&quot;,
&quot;incomplete&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;closed&quot; , &quot;/img/samples/flag_red.gif&quot;,
&quot;/s.gif&quot;), 
&quot;Priority Flag&quot;)</formula>
    <label>Etat contrat</label>
    <type>Text</type>
</CustomField>