hubSide/force-app/main/default/objects/Asset/fields/Etat_emprunt__c.field-meta.xml
<CustomField>
    <fullName>Etat_emprunt__c</fullName>
    <description>Informe s&apos;il y a un emprunt en cours au niveau du contrat.</description>
    <label>Etat emprunt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pas d’emprunt</fullName>
                <default>true</default>
                <label>Pas d’emprunt</label>
            </value>
            <value>
                <fullName>Emprunt en cours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>