hubSide/force-app/main/default/objects/Asset/fields/Etat_paiement__c.field-meta.xml
<CustomField>
    <fullName>Etat_paiement__c</fullName>
    <label>Etat paiement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>unpaid</fullName>
                <label>Impayé</label>
            </value>
            <value>
                <fullName>valid</fullName>
                <label>Valide</label>
            </value>
            <value>
                <fullName>regularisedUnpaid</fullName>
                <label>Impayé régularisé</label>
            </value>
            <value>
                <fullName>unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>