hubSide/force-app/main/default/objects/Asset/fields/Etat_plafond__c.field-meta.xml
<CustomField>
    <fullName>Etat_plafond__c</fullName>
    <formula>IF(
    Indemnisation_contrat_restante__c  &lt;  0  || Indemnisation_contrat_restante__c  =  0,
    IMAGE(&quot;/resource/KO_Icon&quot;, &quot;KO&quot;, 32, 32),
    IMAGE(&quot;/resource/OK_Icon&quot;, &quot;OK&quot;, 32, 32)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Etat plafond</label>
    <type>Text</type>
</CustomField>