hubSide/force-app/main/default/objects/Asset/fields/Etat_reglement__c.field-meta.xml
<CustomField>
    <fullName>Etat_reglement__c</fullName>
    <formula>IF(
    ISPICKVAL(Etat_paiement__c, &quot;unpaid&quot;),
    IMAGE(&quot;/resource/KO_Icon&quot;, &quot;KO&quot;, 32, 32),
    IMAGE(&quot;/resource/OK_Icon&quot;, &quot;OK&quot;, 32, 32)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Etat règlement</label>
    <type>Text</type>
</CustomField>