hubSide/force-app/main/default/objects/Asset/fields/Facture__c.field-meta.xml
<CustomField>
    <fullName>Facture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consommation</label>
    <referenceTo>Facture__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>