hubSide/force-app/main/default/objects/Asset/fields/Formule__c.field-meta.xml
<CustomField>
    <fullName>Formule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Formule</label>
    <referenceTo>vlocity_ins__AssetCoverage__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>