hubSide/force-app/main/default/objects/Asset/fields/Id_contrat_B_appli__c.field-meta.xml
<CustomField>
    <fullName>Id_contrat_B_appli__c</fullName>
    <label>Id contrat B-appli</label>
    <length>25</length>
    <type>Text</type>
</CustomField>