hubSide/force-app/main/default/objects/Asset/fields/Id_distributeur__c.field-meta.xml
<CustomField>
    <fullName>Id_distributeur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id issu du Flux API (Si Id_distributeur__c n&apos;existe pas dans Account alors rattaché à l&apos;Account Distributeur générique &quot;Non Reconnu&quot;)</description>
    <label>Id Distributeur</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets (Distributeur)</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>