hubSide/force-app/main/default/objects/Asset/fields/Id_distributeur_non_reconnu__c.field-meta.xml
<CustomField>
    <fullName>Id_distributeur_non_reconnu__c</fullName>
    <description>Id issu du Flux API (Récupère la valeur Id_distributeur__c si et seulement Id_distributeur__c n&apos;existe pas dans Account)</description>
    <label>Id_ext distributeur non reconnu</label>
    <length>25</length>
    <type>Text</type>
</CustomField>