hubSide/force-app/main/default/objects/Asset/fields/Id_externe__c.field-meta.xml
<CustomField>
    <fullName>Id_externe__c</fullName>
    <description>Id Externe utilisé par les interfaces pour l&apos;Upsert et stocké l&apos;Id du sytème source</description>
    <externalId>true</externalId>
    <label>Id externe</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>