hubSide/force-app/main/default/objects/Asset/fields/Id_vendeur_non_reconnu__c.field-meta.xml
<CustomField>
    <fullName>Id_vendeur_non_reconnu__c</fullName>
    <description>Id issu du flux API (Récupère la valeur vlocity_ins__PrimaryProducerId__c si et seulement vlocity_ins__PrimaryProducerId__c n&apos;existe pas dans Contact)</description>
    <label>Id vendeur non reconnu</label>
    <length>25</length>
    <type>Text</type>
</CustomField>