hubSide/force-app/main/default/objects/Asset/fields/Indemnisation_contrat_restante_1__c.field-meta.xml
<CustomField>
    <fullName>Indemnisation_contrat_restante_1__c</fullName>
    <formula>Plafond__c - TECH_PreviousAmountIndem__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indemnisation contrat période -1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>