hubSide/force-app/main/default/objects/Asset/fields/Indemnisation_contrat_restante__c.field-meta.xml
<CustomField>
    <fullName>Indemnisation_contrat_restante__c</fullName>
    <formula>Plafond__c   -  Montant_indemnisation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indemnisation contrat restante</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>