hubSide/force-app/main/default/objects/Asset/fields/Insurer__c.field-meta.xml
<CustomField>
    <fullName>Insurer__c</fullName>
    <label>Assureur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AXERIA</fullName>
            </value>
            <value>
                <fullName>MATMUT</fullName>
            </value>
            <value>
                <fullName>MMASFAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>