hubSide/force-app/main/default/objects/Asset/fields/Montant_indemnisation__c.field-meta.xml
<CustomField>
    <fullName>Montant_indemnisation__c</fullName>
    <label>Montant indemnisation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>