hubSide/force-app/main/default/objects/Asset/fields/Motif_cloture__c.field-meta.xml
<CustomField>
    <fullName>Motif_cloture__c</fullName>
    <description>Motif lié à la résiliation demandée par le client</description>
    <label>Motif de clôture</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>clientCancellation</fullName>
                <label>Résiliation client</label>
            </value>
            <value>
                <fullName>unpaidCancellation</fullName>
                <label>Résiliation impayé</label>
            </value>
            <value>
                <fullName>fraudCancellation</fullName>
                <label>Résiliation fraude</label>
            </value>
            <value>
                <fullName>oppositionCancellation</fullName>
                <label>Résiliation opposition</label>
            </value>
            <value>
                <fullName>unknown</fullName>
                <label>Sans objet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>