hubSide/force-app/main/default/objects/Asset/fields/NbRepMake__c.field-meta.xml
<CustomField>
    <fullName>NbRepMake__c</fullName>
    <label># Réparations réalisées</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>