hubSide/force-app/main/default/objects/Asset/fields/Nom_distributeur_non_reconnu__c.field-meta.xml
<CustomField>
    <fullName>Nom_distributeur_non_reconnu__c</fullName>
    <description>Nom du distributeur issu de B-Appli non reconnu dans Salesforce
A affiché si et seulement si Id_distributeur_non_reconnu__c non null</description>
    <label>Nom du distributeur non reconnu</label>
    <length>50</length>
    <type>Text</type>
</CustomField>