hubSide/force-app/main/default/objects/Asset/fields/Nom_vendeur_non_reconnu__c.field-meta.xml
<CustomField>
    <fullName>Nom_vendeur_non_reconnu__c</fullName>
    <description>Issu du Flux API
A affiché si et seulement si Id_vendeur_non_reconnu__c est non null</description>
    <label>Nom du vendeur non reconnu</label>
    <length>50</length>
    <type>Text</type>
</CustomField>