hubSide/force-app/main/default/objects/Asset/fields/Nombre_echanges__c.field-meta.xml
<CustomField>
    <fullName>Nombre_echanges__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Nombre d’échanges autorisés sur une période de 1 an</description>
    <label>Nombre d&apos;échanges</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>