hubSide/force-app/main/default/objects/Asset/fields/Nombre_jours_consommes__c.field-meta.xml
<CustomField>
    <fullName>Nombre_jours_consommes__c</fullName>
    <formula>Facture__r.Nombre_jours_consommes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de jours consommés</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>