hubSide/force-app/main/default/objects/Asset/fields/Nombre_mobiles_couverts__c.field-meta.xml
<CustomField>
    <fullName>Nombre_mobiles_couverts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Nombre de mobiles couverts par le contrat</description>
    <label>Nombre de mobiles couverts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>