hubSide/force-app/main/default/objects/Asset/fields/Nombre_produits_assures__c.field-meta.xml
<CustomField>
    <fullName>Nombre_produits_assures__c</fullName>
    <label>Nombre de produits assurés</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nombre_de_produits_assures</valueSetName>
    </valueSet>
</CustomField>