hubSide/force-app/main/default/objects/Asset/fields/Nombre_produits_multimedia_couverts__c.field-meta.xml
<CustomField>
    <fullName>Nombre_produits_multimedia_couverts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Nombre de produits multimédia couverts par le contrat</description>
    <label>Nombre de produits multimédia couverts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>