hubSide/force-app/main/default/objects/Asset/fields/Nombre_r_parations__c.field-meta.xml
<CustomField>
    <fullName>Nombre_r_parations__c</fullName>
    <label>Nombre réparations</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>