hubSide/force-app/main/default/objects/Asset/fields/Num_Contrat__c.field-meta.xml
<CustomField>
    <fullName>Num_Contrat__c</fullName>
    <description>Utilisé pour la page &quot;mon espace&quot; de community afin de rendre la valeur non cliquable</description>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N° Contrat</label>
    <type>Text</type>
</CustomField>