hubSide/force-app/main/default/objects/Asset/fields/Oxydation__c.field-meta.xml
<CustomField>
    <fullName>Oxydation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oxydation</label>
    <type>Checkbox</type>
</CustomField>