hubSide/force-app/main/default/objects/Asset/fields/Pertes_avec_franchise__c.field-meta.xml
<CustomField>
    <fullName>Pertes_avec_franchise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pertes avec franchise</label>
    <type>Checkbox</type>
</CustomField>