hubSide/force-app/main/default/objects/Asset/fields/seller_external_id__c.field-meta.xml
<CustomField>
    <fullName>seller_external_id__c</fullName>
    <label>sellerExternalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>