hubSide/force-app/main/default/objects/Asset/fields/sellerName__c.field-meta.xml
<CustomField>
    <fullName>sellerName__c</fullName>
    <label>sellerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>