hubSide/force-app/main/default/objects/Asset/fields/Sinistre_declares_asset__c.field-meta.xml
<CustomField>
    <fullName>Sinistre_declares_asset__c</fullName>
    <label>#Sinistre declares</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>