hubSide/force-app/main/default/objects/Asset/fields/Statut_cloture__c.field-meta.xml
<CustomField>
    <fullName>Statut_cloture__c</fullName>
    <label>Statut de clôture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>clientRequest</fullName>
                <label>A la demande du client</label>
            </value>
            <value>
                <fullName>providerRequest</fullName>
                <label>Initié par la SFAM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>