hubSide/force-app/main/default/objects/Asset/fields/supplier_external_id__c.field-meta.xml
<CustomField>
    <fullName>supplier_external_id__c</fullName>
    <label>supplierExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>