hubSide/force-app/main/default/objects/Asset/fields/supplierName__c.field-meta.xml
<CustomField>
    <fullName>supplierName__c</fullName>
    <label>supplierName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>