hubSide/force-app/main/default/objects/Asset/fields/TECH_CalculatorIndicLastChange__c.field-meta.xml
<CustomField>
    <fullName>TECH_CalculatorIndicLastChange__c</fullName>
    <label>TECH_CalculatorIndicLastChange</label>
    <type>Date</type>
</CustomField>