hubSide/force-app/main/default/objects/Asset/fields/TECH_CalculatorIndicNextChange__c.field-meta.xml
<CustomField>
    <fullName>TECH_CalculatorIndicNextChange__c</fullName>
    <formula>DATE(    YEAR(ADDMONTHS(TECH_CalculatorIndicLastChange__c,Formule__r.Formule_options__r.NbMounthKPIContract__c)),
         MONTH(ADDMONTHS(TECH_CalculatorIndicLastChange__c,Formule__r.Formule_options__r.NbMounthKPIContract__c)),
		 DAY(ADDMONTHS(TECH_CalculatorIndicLastChange__c,Formule__r.Formule_options__r.NbMounthKPIContract__c)))-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_CalculatorIndicNextChange</label>
    <type>Date</type>
</CustomField>