hubSide/force-app/main/default/objects/Asset/fields/TECH_LastBirthDayContract__c.field-meta.xml
<CustomField>
    <fullName>TECH_LastBirthDayContract__c</fullName>
    <label>TECH_LastBirthDayContract</label>
    <type>Date</type>
</CustomField>