hubSide/force-app/main/default/objects/Asset/fields/TECH_PreviousAmountIndem__c.field-meta.xml
<CustomField>
    <fullName>TECH_PreviousAmountIndem__c</fullName>
    <label>Montant indemnisation période -1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>