hubSide/force-app/main/default/objects/Asset/fields/Type_de_contrat__c.field-meta.xml
<CustomField>
    <fullName>Type_de_contrat__c</fullName>
    <label>Type de contrat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_produit</valueSetName>
    </valueSet>
</CustomField>