hubSide/force-app/main/default/objects/Asset/fields/Vol_Caracterise__c.field-meta.xml
<CustomField>
    <fullName>Vol_Caracterise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vol Caractérisé</label>
    <type>Checkbox</type>
</CustomField>