hubSide/force-app/main/default/objects/Asset/fields/Vol_toute_cause__c.field-meta.xml
<CustomField>
    <fullName>Vol_toute_cause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vol toute cause</label>
    <type>Checkbox</type>
</CustomField>