hubSide/force-app/main/default/objects/Asset/recordTypes/Contrat_assurance.recordType-meta.xml
<RecordType>
    <fullName>Contrat_assurance</fullName>
    <active>true</active>
    <label>Contrat assurance</label>
</RecordType>