hubSide/force-app/main/default/objects/Asset/recordTypes/Contrat_location.recordType-meta.xml
<RecordType>
    <fullName>Contrat_location</fullName>
    <active>true</active>
    <description>Lié aux contrats de location</description>
    <label>Contrat location</label>
</RecordType>