hubSide/force-app/main/default/objects/Asset/recordTypes/vlocity_ins__IndividualAnnuity.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__IndividualAnnuity</fullName>
    <active>true</active>
    <label>Annuity</label>
</RecordType>