hubSide/force-app/main/default/objects/Asset/recordTypes/vlocity_ins__IndividualLife.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__IndividualLife</fullName>
    <active>true</active>
    <label>Individual Life</label>
</RecordType>