hubSide/force-app/main/default/objects/Asset/validationRules/Date_de_resiliation_obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_de_resiliation_obligatoire</fullName>
    <active>true</active>
    <description>La date de clôture est obligatoire pour les contrats fermés.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &apos;closed&apos;),
    ISBLANK(Date_cloture__c)
)</errorConditionFormula>
    <errorMessage>La date de clôture est obligatoire pour les contrats fermés.</errorMessage>
</ValidationRule>