hubSide/force-app/main/default/objects/Asset/validationRules/Date_debut_contrat_obligatoire_location.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_debut_contrat_obligatoire_location</fullName>
    <active>true</active>
    <description>La date de début de contrat est obligatoire lors de la création d&apos;un contrat de location.</description>
    <errorConditionFormula>AND(
    ISBLANK( Date_debut_contrat__c ),
    RecordType.Name = &apos;Contrat location&apos;
)</errorConditionFormula>
    <errorDisplayField>Date_debut_contrat__c</errorDisplayField>
    <errorMessage>Merci de bien vouloir renseigner la date de début du contrat.</errorMessage>
</ValidationRule>