hubSide/force-app/main/default/objects/Asset/validationRules/Gestion_resiliation.validationRule-meta.xml
<ValidationRule>
    <fullName>Gestion_resiliation</fullName>
    <active>false</active>
    <description>Remplir le motif de résiliation ET la date de résiliation</description>
    <errorConditionFormula>OR(
    AND(
        ISCHANGED(Motif_cloture__c), 
        NOT(ISPICKVAL(Motif_cloture__c, &apos;&apos;)), 
        ISBLANK(Date_cloture__c)
    ),
    AND(
        ISCHANGED(Date_cloture__c), 
        NOT(ISBLANK(Date_cloture__c)), 
        ISPICKVAL(Motif_cloture__c, &apos;&apos;)
    )
)</errorConditionFormula>
    <errorMessage>Merci de remplir la date ainsi que le motif de clôture.</errorMessage>
</ValidationRule>